Closed Bug 1805147 Opened 3 years ago Closed 3 years ago

Potential deadlock in nsAvailableMemoryWatcher::Observe

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
110 Branch
Tracking Status
firefox110 --- fixed

People

(Reporter: jstutte, Assigned: jstutte)

References

Details

Attachments

(1 file)

From https://treeherder.mozilla.org/logviewer?job_id=398938924&repo=autoland&lineNumber=8890 it seems that we:

I wonder why the shutdown method needs to lock that mutex at all?

Assignee: nobody → jstutte
Status: NEW → ASSIGNED

From code reading it seems that Windows and MacOS are not affected by this.

OS: Unspecified → Linux
Pushed by jstutte@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/912e096ae1de Do not hold a lock on mMutex while waiting for the thread to shut down. r=gsvelto
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
Regressions: 1805368
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: