Bug 1805147 - Do not hold a lock on mMutex while waiting for the thread to shut down. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D164454